fix some position problems
fix for:  Layout issue on configuration page (button is outside of screen, if validation warning pops-up) #79 
fix for:  Job configuration page layout and JS issue in Chrome #78 

fixes https://github.com/bamotav/Hangfire.RecurringJobAdmin/issues/78
fixes https://github.com/bamotav/Hangfire.RecurringJobAdmin/issues/79

--- a/src/Hangfire.RecurringJobAdmin/Dashboard/Content/css/JobExtension.css
+++ b/src/Hangfire.RecurringJobAdmin/Dashboard/Content/css/JobExtension.css
@@ -1,22 +1,23 @@
-﻿/** Main */
+/** Main */
 #app {
     position: relative !important;
-    left: -229px !important;
+    left: 0px !important;
 }
 
 #app > div > div {
     margin-top: 30px !important;
-    width: 1626px !important
+    width: 100% !important;
 }
 
 /* Modal */
 .modal-mask {
-    position: fixed;
+    overflow-y: scroll;
+    position: absolute;
     z-index: 9998;
-    top: 0;
-    left: 0;
+    top: -200px; /*same as .modal-wrapper padding-top: 200px; */
+    /*left: 0px;*/
     width: 100%;
-    height: 100%;
+    height: calc(100vh + 120px);
     background-color: rgba(0, 0, 0, .5);
     display: table;
     transition: opacity .3s ease;
@@ -24,7 +25,8 @@
 
 .modal-wrapper {
     display: table-cell;
-    vertical-align: middle;
+    vertical-align: top;
+    padding-top: 200px; /*same as .modal-mask top: -200px; */
 }
 
 .modal-container {
